--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -38,7 +38,7 @@
                     </form>
                 </div>    
                 <div class="buttons_navigate_choice">
-                    <button class="button button--red">Сбросить</button>
+                    <button  class="button button--red">Сбросить</button>
                     <button class="button button--green">Применить</button>
 
                     <!-- Кнопка в которой два окна Popup-->
@@ -244,7 +244,12 @@
                         <span class="close-btn">&times;</span>
                     </div>
                     <div class="content-area">
-                        Удаление позиции
+                        <p>
+                            Вы действительно хотите удалить эту позицию?
+                        </p>
+                        <div class="form-buttons">
+                            <button id="del_row_comers_table" class="button button--red">Удалить</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -284,6 +289,7 @@
     </script>
     <script src='{% static 'shared\js\components\popup_manager.js' %}'></script>
     <script src='{% static 'comers\js\create_supplier.js' %}'></script>
+    <script src='{% static 'comers\js\delete_row.js' %}'></script>
     <script src='{% static 'comers\js\create_invoice.js' %}'></script>
     <script src='{% static 'comers\js\auto_fields.js' %}'></script>
     <script src='{% static 'comers\js\filters.js' %}'></script>
