добавление и удаление без перезагрузки страницы. Добавлен сериалайзер

--- a/static/comers/css/comers.css
+++ b/static/comers/css/comers.css
@@ -13,4 +13,5 @@
 @import url('components/style.css');
 @import url('components/comers-table.css');
 @import url('components/data_form.css');
+@import url('components/form_animation.css');
 
