поставщик, внесение данных, добавление без перезагрузки, анимации

--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -86,7 +86,7 @@
                         <form id="add_suppler_form" method="post">
                             {% csrf_token %}
                             {{add_suppler_form}}
-                            <button type="submit" class="button button--green button_supplier ">Отправить</button>
+                            <button type="button" class=" button_supplier button button--green ">Отправить</button>
                         </form>
                     </div>
                 </div>
