фильтры через js

--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -39,7 +39,7 @@
                 </div>    
                 <div class="buttons_navigate_choice">
                     <button  class="button button--red">Сбросить</button>
-                    <button class="button button--green">Применить</button>
+                    <button form="choice_form_container" type="button" class="button button--green">Применить</button>
 
                     <!-- Кнопка в которой два окна Popup-->
                     <div class="open-btn" data-popup="popup1">
