--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -100,7 +100,7 @@
                         <span class="close-btn">&times;</span>
                     </div>
                     <div class="content-area">
-                        <form id="inputDataForm" method="post" class="data-entry-form">
+                        <form id="createInvoiceForm" method="post" class="data-entry-form create-form">
                             {% csrf_token %}
                     
                             <div class="form-columns">
@@ -190,9 +190,6 @@
                             </div>
                         </form>
                     </div>
-                    
-                    
-                    
                 </div>
             </div>
             <!-- Окно 4: Меню с отчетом -->
@@ -217,7 +214,7 @@
                         <span class="close-btn">&times;</span>
                     </div>
                     <div class="content-area">
-                        <form id="invoice_edit_form" method="post" class="data-entry-form">
+                        <form id="editInvoiceForm" method="post" class="data-entry-form edit-form">
                             {% csrf_token %}
                     
                             <div class="form-columns">
@@ -302,7 +299,7 @@
                             <input type="hidden" id="hidden_project" name="{{ invoice_edit_form.project.html_name }}">
                             <!-- Кнопки -->
                             <div class="form-buttons">
-                            <button type="submit" class="send_data_form_button button button--green">Применить</button>
+                            <button type="button" class="send_data_form_edit_button button button--green">Применить</button>
                         </div>
                         </form>
                     </div>
@@ -373,6 +370,7 @@
     <script src='{% static 'comers\js\get_all_data_load_page.js' %}'></script>
     <script src='{% static 'shared\js\components\popup_manager.js' %}'></script>
     <script src='{% static 'comers\js\create_supplier.js' %}'></script>
+    <script src='{% static 'comers\js\send_edit_row.js' %}'></script>
     <script src='{% static 'comers\js\edit_row.js' %}'></script>
     <script src='{% static 'comers\js\localstorage.js' %}'></script>
     <script src='{% static 'comers\js\delete_row.js' %}'></script>
