--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -374,21 +374,24 @@
                     <!-- Data will be loaded here -->
             </tbody>
             </table>
-    <script>
-        // Пути к иконкам
-        const ICON_EDIT = "{% static '/comers/icons/icon_edit.png' %}";
-        const ICON_STATUS = "{% static '/comers/icons/icon_status.png' %}";
-        const ICON_DELETE = "{% static '/comers/icons/icon_delete.png' %}";
-    </script>
-    <script src='{% static 'comers\js\get_all_data_load_page.js' %}'></script>
-    <script src='{% static 'shared\js\components\popup_manager.js' %}'></script>
-    <script src='{% static 'comers\js\create_supplier.js' %}'></script>
-    <script src='{% static 'comers\js\send_edit_row.js' %}'></script>
-    <script src='{% static 'comers\js\send_edit_status.js' %}'></script>
-    <script src='{% static 'comers\js\edit_row.js' %}'></script>
-    <script src='{% static 'comers\js\localstorage.js' %}'></script>
-    <script src='{% static 'comers\js\delete_row.js' %}'></script>
-    <script src='{% static 'comers\js\create_invoice.js' %}'></script>
-    <script src='{% static 'comers\js\auto_fields.js' %}'></script>
+            <script>
+                // Глобальные константы для совместимости
+                const ICON_EDIT = "{% static '/comers/icons/icon_edit.png' %}";
+                const ICON_STATUS = "{% static '/comers/icons/icon_status.png' %}";
+                const ICON_DELETE = "{% static '/comers/icons/icon_delete.png' %}";
+            </script>
+            
+            <!-- Сначала общий скрипт, затем остальные -->
+            <script src='{% static 'comers/js/common.js' %}'></script>
+            <script src='{% static 'shared/js/components/popup_manager.js' %}'></script>
+            <script src='{% static 'comers/js/get_all_data_load_page.js' %}'></script>
+            <script src='{% static 'comers/js/filters.js' %}'></script>
+            <script src='{% static 'comers/js/create_supplier.js' %}'></script>
+            <script src='{% static 'comers/js/create_invoice.js' %}'></script>
+            <script src='{% static 'comers/js/edit_row.js' %}'></script>
+            <script src='{% static 'comers/js/send_edit_row.js' %}'></script>
+            <script src='{% static 'comers/js/send_edit_status.js' %}'></script>
+            <script src='{% static 'comers/js/delete_row.js' %}'></script>
+            <script src='{% static 'comers/js/auto_fields.js' %}'></script>
 </body>
 </html>
