условия для подсветки проекта, статуса

--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -359,7 +359,7 @@
                         <th>поставщик</th>
                         <th>артикул</th>
                         <th>наименование</th>
-                        <th>единицы измерения</th>
+                        <th>единицы</th>
                         <th>количество</th>
                         <th>комментарий</th>
                         <th>описание</th>
