--- a/static/comers/css/components/style.css
+++ b/static/comers/css/components/style.css
@@ -89,7 +89,7 @@ th, td {
     text-align: left;
 }
 th {
-    background-color: #f2f2f2;
+    background-color: var(--table-header-bg);
 }
 tr:nth-child(even) {
     background-color: #f9f9f9;
