--- a/static/finder/css/components/menu.css
+++ b/static/finder/css/components/menu.css
@@ -10,10 +10,10 @@
     font-size: 18px;
  
 }
-.menu_link div {
+.menu_link {
     color: var(--text-color-white);
     font-size: 18px;
- 
+    cursor: pointer;
 }
 
 .menu_row:hover  .menu_link a {
