--- a/finder/templates/finder/index2.html
+++ b/finder/templates/finder/index2.html
@@ -264,45 +264,51 @@
                     </div>
                     <div class="hide_info" id="hide_info">Скрыть информацию</div>
                 </div>
-                <div class="menu_row">
-                    <img src="{% static 'finder/icon/notes.svg' %}" alt="Иконка заметок">
-                    <div class="menu_link">
-                        <a href="#">Заметки</a>
+                <div class="menu-container {% if not request.user.is_authenticated %}menu-disabled{% endif %}">
+                    <div class="menu_row">
+                        <img src="{% static 'finder/icon/comers.svg' %}" alt="Иконка недопоставок">
+                        <div class="menu_link">
+                            <a href="/comers">Недопоставки</a>
+                        </div>
                     </div>
-                </div>
-                <div class="menu_row">
-                    <img src="{% static 'finder/icon/sahr.svg' %}" alt="Иконка С.А.ХР">
-                    <div class="menu_link">
-                        <a href="#">С.А.ХР</a>
+                    <div class="menu_row">
+                        <img src="{% static 'finder/icon/notes.svg' %}" alt="Иконка заметок">
+                        <div class="menu_link">
+                            <a href="#">Заметки</a>
+                        </div>
                     </div>
-                </div>
-                <div class="menu_row">
-                    <img src="{% static 'finder/icon/archive.svg' %}" alt="Иконка архива">
-                    <div class="menu_link">
-                        <a href="#">Архив</a>
+                    <div class="menu_row" >
+                        <img src="{% static 'finder/icon/sahr.svg' %}" alt="Иконка С.А.ХР">
+                        <div class="menu_link" >
+                            <a href="#">С.А.ХР</a>
+                        </div>
                     </div>
-                </div>
-                <div class="menu_row">
-                    <img src="{% static 'finder/icon/comers.svg' %}" alt="Иконка недопоставок">
-                    <div class="menu_link">
-                        <a href="#">Недопоставки</a>
+                    <div class="menu_row">
+                        <img src="{% static 'finder/icon/archive.svg' %}" alt="Иконка архива">
+                        <div class="menu_link">
+                            <a href="#">Архив</a>
+                        </div>
                     </div>
-                </div>
-                <div class="menu_row">
-                    <img src="{% static 'finder/icon/inventory.svg' %}" alt="Иконка инвентаризации">
-                    <div class="menu_link">
-                        <a href="#">Инвентаризация</a>
+                    <div class="menu_row">
+                        <img src="{% static 'finder/icon/inventory.svg' %}" alt="Иконка инвентаризации">
+                        <div class="menu_link">
+                            <a href="#">Инвентаризация</a>
+                        </div>
                     </div>
-                </div>
-
-
+</div> 
 
             </div> 
             <div class="down_menu">
-                <div class="button button--green button_wrapper_update ">
-                    <img src="{% static 'finder/icon/update_base.svg' %}" alt="Иконка обновления базы">
-                    <div>Обновить базу</div>
-                </div>
+                {% if user.is_authenticated %}
+                {% with user_groups=user.groups.all|join:", " %}
+                {% if "sklad" in user_groups %}
+                    <div class="button button--green button_wrapper_update">
+                        <img src="{% static 'finder/icon/update_base.svg' %}" alt="Иконка обновления базы">
+                        <div>Обновить базу</div>
+                    </div>
+                {% endif %}
+                {% endwith %}
+            {% endif %}
                 <div class="menu_row_down">
                     <img src="{% static 'finder/icon/login.svg' %}" alt="Иконка входа">
                     {% if user.is_authenticated %}
