--- a/static/comers/css/components/comers-table.css
+++ b/static/comers/css/components/comers-table.css
@@ -38,5 +38,8 @@ thead th {
     position: sticky;
     top: 0;
     z-index: 2; /* чтобы заголовок был поверх тела таблицы */
-  
+}
+
+.info_project {
+    cursor: pointer;
 }
